# LT_assig

./: .gitignore  README.md  assignment.py  pyproject.toml  render.yaml
.data/: broker.db
assignment/: config.py
assignment/core/: app.py  github_api.py  tasks.py
assignment/core/database/: db.py  models.py  sqlite.py
assignment/core/gemini/: parser.py  prompts.py
assignment/core/utils/: huey_config.py
assignment/web/static/css/: style.css
assignment/web/templates/: base.html  document.html
core/: app.py  config.py
web/static/css/: style.css
web/static/js/: upload.js
web/templates/: upload.html
