[project]
name = "lt-assig"
version = "0.1.0"
description = ""
authors = [
    {name = "pUrGe12",email = "helloitsme0218@gmail.com"}
]
packages = [
    { include = "core" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (==3.0.3)",
    "huey (>=2.5.3,<3.0.0)",
    "werkzeug (==3.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
